FixClientCreateClientAutoAndControllerStillInProgress